syntax = "proto3";

package chat;

import "google/protobuf/timestamp.proto";

service ChatGrpcService {
  rpc createConversation (CreateConversationRequest) returns (CreateConversationResponse) {}
  rpc addMemberToConversation (AddMemberToConversationRequest) returns (AddMemberToConversationResponse) {}
}

message CreateConversationRequest {
    string type = 1;
    repeated string memberIds = 2;
    optional string groupName = 3;
    optional string groupAvatar = 4;
    optional string createrId = 5;
}

message CreateConversationResponse {
    string id = 1;
    repeated string memberIds = 2;
    string type = 3;
    optional string groupName = 4;
    optional string groupAvatar = 5;
    optional string adminId = 6;
}

message AddMemberToConversationRequest {
  string conversationId = 1;
  repeated string memberIds = 2;
}

message AddMemberToConversationResponse {
  string status = 1;
}